2007-07-xx Jeff Connelly <jeff2@soc.pidgin.im> - 0.12
* Allow logging in with passwords containing uppercase letters (bug #2066)
* Add /3 -> | translation to escaping.

2007-07-09 Jeff Connelly <jeff2@soc.pidgin.im> - 0.11
* Allow going idle (tested with I'dle Ma'ker) and viewing idle status of 
  buddies (thanks to Scott Ellis, developing a MySpaceIM plugin for Miranda IM,
  for finding the idle status code.)
* Time out if no data from server within a certain amount of time 
  (keep alives).
* Remove "Sign on as hidden" option, and always set status to current status
  when signing on.
* Some support for sending formatted text.
* Fix build process on Unix, bug #2086.

2007-07-03 Jeff Connelly <jeff2@soc.pidgin.im> - 0.10
* On incoming instant messages, add support for:
 * Text color
 * Font face
* Add option to sign on as hidden, default off (previously, always was hidden)
* Add ability to change status to hidden, available, away
* Increase password length limit to 10 to match official client (bug #2010)

2007-07-01 Jeff Connelly <jeff2@soc.pidgin.im> - 0.9
* Fix crash on Windows when logging in (bug #1990)
* Fix crash on Windows when viewing tooltip text (bug #1999)

2007-06-30 Jeff Connelly <jeff2@soc.pidgin.im> - 0.8
* Allow "Get Info" on all users, by uid or username
* Fix crash when re-logging in, if login failed.
* Show descriptive error message if login password is too long.
* Fake self from being online, since can't add self to buddy list.
* Update for Libpurple 2.0.2.
* Partial support for formatting on incoming instant messages.

2007-06-14 Jeff Connelly <jeff2@soc.pidgin.im> - 0.7
* Add/delete buddy now functional (required many other code improvements).
* Show improved buddy information in tooltip text.
* Show user profile (in "Get Info" option) for buddies on buddy list.
* Fix crash when re-logging in, if login succeeded.

2007-06-12 Jeff Connelly <jeff2@soc.pidgin.im> - 0.6
* Use RC4 code from Libpurple 2.0.1